simplified statements that where always true